Modify MovieServiceTest.java to get rid of warnings.