@@ -4,7 +4,6 @@ package com.example.movie_service.service;
 import com.example.movie_service.dto.MovieSearchResultDTO;
 import com.example.movie_service.exception.ValidationException;
 import com.example.movie_service.repository.CustomMovieRepository;
-import com.example.movie_service.repository.PersonRepository;
 import com.example.movie_service.response.CustomResponse;
 import jakarta.persistence.PersistenceException;
 import jakarta.persistence.QueryTimeoutException;
@@ -12,13 +11,10 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
-import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-
-import java.util.Arrays;
 import java.util.List;
 
 import static com.example.movie_service.constant.MovieConstant.*;
@@ -74,9 +70,7 @@ public class MovieServiceTest {
 
         doThrow(ValidationException.class).when(validationService).validateTitle(any());
 
-        assertThrows(ValidationException.class, () -> {
-            movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-        });
+        assertThrows(ValidationException.class, () -> movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction));
     }
 
     @Test
@@ -86,9 +80,9 @@ public class MovieServiceTest {
         doNothing().when(validationService).validateTitle(any());
         doThrow(ValidationException.class).when(validationService).validateReleasedYear(any());
 
-        assertThrows(ValidationException.class, () -> {
-           movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-        }, "searchMovies did not throw a ValidationException");
+        assertThrows(ValidationException.class, () -> movieServiceImpl.searchMovies
+                (title, releasedYear, director, genre, limit, page, orderBy, direction),
+                "searchMovies did not throw a ValidationException");
     }
 
     @Test
@@ -99,9 +93,9 @@ public class MovieServiceTest {
         doNothing().when(validationService).validateReleasedYear(any());
         doThrow(ValidationException.class).when(validationService).validateLimit(any());
 
-        assertThrows(ValidationException.class, () -> {
-            movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-        }, "searchMovies did not throw a ValidationException");
+        assertThrows(ValidationException.class, () -> movieServiceImpl.searchMovies
+                (title, releasedYear, director, genre, limit, page, orderBy, direction),
+                "searchMovies did not throw a ValidationException");
     }
 
     @Test
@@ -113,9 +107,9 @@ public class MovieServiceTest {
         doNothing().when(validationService).validateLimit(any());
         doThrow(ValidationException.class).when(validationService).validatePage(any());
 
-        assertThrows(ValidationException.class, () -> {
-            movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-        }, "searchMovies did not throw a ValidationException");
+        assertThrows(ValidationException.class, () -> movieServiceImpl.searchMovies
+                (title, releasedYear, director, genre, limit, page, orderBy, direction),
+                "searchMovies did not throw a ValidationException");
     }
 
     @Test
@@ -128,9 +122,9 @@ public class MovieServiceTest {
         doNothing().when(validationService).validatePage(any());
         doThrow(ValidationException.class).when(validationService).validateOrderBy(any());
 
-        assertThrows(ValidationException.class, () -> {
-            movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-        }, "searchMovies did not throw a ValidationException");
+        assertThrows(ValidationException.class, () -> movieServiceImpl.searchMovies
+                (title, releasedYear, director, genre, limit, page, orderBy, direction),
+                "searchMovies did not throw a ValidationException");
     }
 
     @Test
@@ -144,9 +138,9 @@ public class MovieServiceTest {
         doNothing().when(validationService).validateOrderBy(any());
         doThrow(ValidationException.class).when(validationService).validateDirection(any());
 
-        assertThrows(ValidationException.class, () -> {
-            movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-        }, "searchMovies did not throw a ValidationException");
+        assertThrows(ValidationException.class, () -> movieServiceImpl.searchMovies
+                (title, releasedYear, director, genre, limit, page, orderBy, direction),
+                "searchMovies did not throw a ValidationException");
     }
 
 
@@ -160,10 +154,9 @@ public class MovieServiceTest {
         doNothing().when(validationService).validateDirection(any());
         doThrow(QueryTimeoutException.class).when(movieRepository).searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
 
-        assertThrows(QueryTimeoutException.class, ()->{
-            movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-
-        }, "searchMovies did not throw a QueryTimeoutException");
+        assertThrows(QueryTimeoutException.class, ()-> movieServiceImpl.searchMovies
+                (title, releasedYear, director, genre, limit, page, orderBy, direction),
+                "searchMovies did not throw a QueryTimeoutException");
     }
 
     @Test
@@ -176,16 +169,15 @@ public class MovieServiceTest {
         doNothing().when(validationService).validateDirection(any());
         doThrow(PersistenceException.class).when(movieRepository).searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
 
-        assertThrows(PersistenceException.class, ()->{
-            movieServiceImpl.searchMovies(title, releasedYear, director, genre, limit, page, orderBy, direction);
-
-        }, "searchMovies did not throw a PersistenceException");
+        assertThrows(PersistenceException.class, ()-> movieServiceImpl.searchMovies
+                (title, releasedYear, director, genre, limit, page, orderBy, direction),
+                "searchMovies did not throw a PersistenceException");
     }
 
     @Test
     public void searchMovieReturnListOfMovieSearchResultDTO() {
         // Setup mock data
-        List<MovieSearchResultDTO> mockMovies = Arrays.asList(
+        List<MovieSearchResultDTO> mockMovies = List.of(
                 new MovieSearchResultDTO("1", "Inception", "2010", "Christopher Nolan", "path/to/backdrop", "path/to/poster", 9.0)
         );
 
@@ -207,6 +199,7 @@ public class MovieServiceTest {
         );
 
         // Verify the results
+        assertNotNull(actualResponseEntity.getBody());
         assertNotNull(actualResponseEntity.getBody().getData());
         assertEquals(1, actualResponseEntity.getBody().getData().size());
         assertEquals("Inception", actualResponseEntity.getBody().getData().get(0).getTitle());
@@ -215,7 +208,7 @@ public class MovieServiceTest {
 
     @Test
     public void searchMovieWithNoResult() {
-        List<MovieSearchResultDTO> mockMovies = Arrays.asList();
+        List<MovieSearchResultDTO> mockMovies = List.of();
 
         // Mock the repository call
         when(movieRepository.searchMovies(anyString(), anyString(), anyString(), anyString(), anyInt(), anyInt(), anyString(), anyString()))
@@ -234,7 +227,8 @@ public class MovieServiceTest {
                 title, releasedYear, director, genre, limit, page, orderBy, direction
         );
 
-        assertNull(actualResponseEntity.getBody().getData());
+        assertNotNull(actualResponseEntity.getBody());
+        assertTrue(actualResponseEntity.getBody().getData().isEmpty());
         assertEquals(actualResponseEntity.getStatusCode(), HttpStatus.OK);
         assertEquals(actualResponseEntity.getBody().getCode(), MOVIE_NOT_FOUND_CODE);
         assertEquals(actualResponseEntity.getBody().getMessage(), MOVIE_NOT_FOUND_MESSAGE);
